--- a/BallScrewVCP3.ui
+++ b/BallScrewVCP3.ui
@@ -41,7 +41,7 @@ qproperty-diameter: 20;
     <item row="0" column="0">
      <widget class="QStackedWidget" name="stackedWidget">
       <property name="currentIndex">
-       <number>1</number>
+       <number>2</number>
       </property>
       <widget class="QWidget" name="page33">
        <layout class="QGridLayout" name="gridLayout_20" rowstretch="0,0,0,0,0,0,0" columnstretch="0,1,3">
@@ -187,71 +187,6 @@ background-image: url(./resources/stripes.png);
              </property>
             </widget>
            </item>
-           <item row="1" column="0">
-            <widget class="PushButton" name="btnTestActive0">
-             <property name="styleSheet">
-              <string notr="true">background-color: rgb(252, 233, 79);</string>
-             </property>
-             <property name="text">
-              <string>active_0</string>
-             </property>
-             <property name="checkable">
-              <bool>true</bool>
-             </property>
-             <property name="checked_state_text_option" stdset="0">
-              <bool>false</bool>
-             </property>
-            </widget>
-           </item>
-           <item row="7" column="0">
-            <widget class="QWidget" name="widget_2" native="true"/>
-           </item>
-           <item row="6" column="0">
-            <widget class="PushButton" name="btnTestActive5">
-             <property name="styleSheet">
-              <string notr="true">background-color: rgb(252, 233, 79);</string>
-             </property>
-             <property name="text">
-              <string>active_5</string>
-             </property>
-             <property name="checkable">
-              <bool>true</bool>
-             </property>
-            </widget>
-           </item>
-           <item row="9" column="0">
-            <widget class="PushButton" name="btnAppend_File33">
-             <property name="styleSheet">
-              <string notr="true">background-color: rgb(252, 233, 79);</string>
-             </property>
-             <property name="text">
-              <string>append_file</string>
-             </property>
-             <property name="checkable">
-              <bool>false</bool>
-             </property>
-            </widget>
-           </item>
-           <item row="11" column="0">
-            <widget class="QPushButton" name="btnTestPatchIni">
-             <property name="text">
-              <string>testPatchIni</string>
-             </property>
-            </widget>
-           </item>
-           <item row="3" column="0">
-            <widget class="PushButton" name="btnTestActive2">
-             <property name="styleSheet">
-              <string notr="true">background-color: rgb(252, 233, 79);</string>
-             </property>
-             <property name="text">
-              <string>active_2</string>
-             </property>
-             <property name="checkable">
-              <bool>true</bool>
-             </property>
-            </widget>
-           </item>
            <item row="8" column="0">
             <widget class="PushButton" name="btnAppend_Buffer33">
              <property name="styleSheet">
@@ -265,13 +200,13 @@ background-image: url(./resources/stripes.png);
              </property>
             </widget>
            </item>
-           <item row="2" column="0">
-            <widget class="PushButton" name="btnTestActive1">
+           <item row="4" column="0">
+            <widget class="PushButton" name="btnTestActive3">
              <property name="styleSheet">
               <string notr="true">background-color: rgb(252, 233, 79);</string>
              </property>
              <property name="text">
-              <string>active_1</string>
+              <string>active_3</string>
              </property>
              <property name="checkable">
               <bool>true</bool>
@@ -293,7 +228,40 @@ font: bold</string>
              </property>
             </widget>
            </item>
-           <item row="13" column="0">
+           <item row="11" column="0">
+            <widget class="QPushButton" name="btnTestPatchIni">
+             <property name="text">
+              <string>testPatchIni</string>
+             </property>
+            </widget>
+           </item>
+           <item row="10" column="0">
+            <widget class="QPushButton" name="btnTest">
+             <property name="text">
+              <string>testPlot</string>
+             </property>
+            </widget>
+           </item>
+           <item row="1" column="0">
+            <widget class="PushButton" name="btnTestActive0">
+             <property name="styleSheet">
+              <string notr="true">background-color: rgb(252, 233, 79);</string>
+             </property>
+             <property name="text">
+              <string>active_0</string>
+             </property>
+             <property name="checkable">
+              <bool>true</bool>
+             </property>
+             <property name="checked_state_text_option" stdset="0">
+              <bool>false</bool>
+             </property>
+            </widget>
+           </item>
+           <item row="7" column="0">
+            <widget class="QWidget" name="widget_2" native="true"/>
+           </item>
+           <item row="14" column="0">
             <spacer name="verticalSpacer_3">
              <property name="orientation">
               <enum>Qt::Vertical</enum>
@@ -306,23 +274,55 @@ font: bold</string>
              </property>
             </spacer>
            </item>
-           <item row="4" column="0">
-            <widget class="PushButton" name="btnTestActive3">
+           <item row="3" column="0">
+            <widget class="PushButton" name="btnTestActive2">
              <property name="styleSheet">
               <string notr="true">background-color: rgb(252, 233, 79);</string>
              </property>
              <property name="text">
-              <string>active_3</string>
+              <string>active_2</string>
              </property>
              <property name="checkable">
               <bool>true</bool>
              </property>
             </widget>
            </item>
-           <item row="10" column="0">
-            <widget class="QPushButton" name="btnTest">
+           <item row="9" column="0">
+            <widget class="PushButton" name="btnAppend_File33">
+             <property name="styleSheet">
+              <string notr="true">background-color: rgb(252, 233, 79);</string>
+             </property>
              <property name="text">
-              <string>testPlot</string>
+              <string>append_file</string>
+             </property>
+             <property name="checkable">
+              <bool>false</bool>
+             </property>
+            </widget>
+           </item>
+           <item row="6" column="0">
+            <widget class="PushButton" name="btnTestActive5">
+             <property name="styleSheet">
+              <string notr="true">background-color: rgb(252, 233, 79);</string>
+             </property>
+             <property name="text">
+              <string>active_5</string>
+             </property>
+             <property name="checkable">
+              <bool>true</bool>
+             </property>
+            </widget>
+           </item>
+           <item row="2" column="0">
+            <widget class="PushButton" name="btnTestActive1">
+             <property name="styleSheet">
+              <string notr="true">background-color: rgb(252, 233, 79);</string>
+             </property>
+             <property name="text">
+              <string>active_1</string>
+             </property>
+             <property name="checkable">
+              <bool>true</bool>
              </property>
             </widget>
            </item>
@@ -330,6 +330,14 @@ font: bold</string>
             <widget class="QPushButton" name="btnToPID">
              <property name="text">
               <string>to PID tune</string>
+             </property>
+            </widget>
+           </item>
+           <item row="13" column="0">
+            <widget class="QPushButton" name="btnToCalibration">
+             <property name="text">
+              <string>Калибровка
+нагрузки</string>
              </property>
             </widget>
            </item>
@@ -972,8 +980,8 @@ font: bold</string>
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>588</width>
-             <height>622</height>
+             <width>241</width>
+             <height>358</height>
             </rect>
            </property>
            <attribute name="label">
@@ -1218,8 +1226,8 @@ font: bold</string>
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>588</width>
-             <height>622</height>
+             <width>98</width>
+             <height>76</height>
             </rect>
            </property>
            <property name="sizePolicy">
@@ -1300,7 +1308,7 @@ font: bold</string>
                 </property>
                </widget>
               </item>
-              <item row="1" column="0">
+              <item row="0" column="0">
                <widget class="QPushButton" name="btnLoadGCode33">
                 <property name="layoutDirection">
                  <enum>Qt::LeftToRight</enum>
@@ -1310,7 +1318,7 @@ font: bold</string>
                 </property>
                </widget>
               </item>
-              <item row="1" column="1">
+              <item row="0" column="1">
                <widget class="ActionButton" name="btnProgram_Run33">
                 <property name="styleSheet">
                  <string notr="true">background-color: rgb(138, 226, 52);</string>
@@ -1333,7 +1341,7 @@ font: bold</string>
                 </property>
                </widget>
               </item>
-              <item row="1" column="2">
+              <item row="0" column="2">
                <widget class="ActionButton" name="btnProgram_Stop33">
                 <property name="styleSheet">
                  <string notr="true">background-color: rgb(239, 41, 41);</string>
@@ -1356,7 +1364,7 @@ font: bold</string>
                 </property>
                </widget>
               </item>
-              <item row="1" column="3" colspan="2">
+              <item row="0" column="3" colspan="2">
                <spacer name="horizontalSpacer">
                 <property name="orientation">
                  <enum>Qt::Horizontal</enum>
@@ -1806,6 +1814,222 @@ font: bold</string>
         </item>
        </layout>
       </widget>
+      <widget class="QWidget" name="page_5">
+       <layout class="QGridLayout" name="gridLayout_26" rowstretch="0,2,1">
+        <item row="1" column="1">
+         <widget class="PlotWidget" name="pltPID_2" native="true">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="1">
+         <widget class="QWidget" name="wgtHeader_3" native="true">
+          <property name="styleSheet">
+           <string notr="true">QWidget#wgtHeader {
+	background-color: rgb(114, 159, 207);
+}</string>
+          </property>
+          <layout class="QGridLayout" name="gridLayout_25">
+           <item row="0" column="1">
+            <spacer name="horizontalSpacer_27">
+             <property name="orientation">
+              <enum>Qt::Horizontal</enum>
+             </property>
+             <property name="sizeHint" stdset="0">
+              <size>
+               <width>40</width>
+               <height>20</height>
+              </size>
+             </property>
+            </spacer>
+           </item>
+           <item row="0" column="0">
+            <widget class="QLabel" name="label_137">
+             <property name="minimumSize">
+              <size>
+               <width>0</width>
+               <height>50</height>
+              </size>
+             </property>
+             <property name="maximumSize">
+              <size>
+               <width>16777215</width>
+               <height>50</height>
+              </size>
+             </property>
+             <property name="styleSheet">
+              <string notr="true">font: 15pt bold;</string>
+             </property>
+             <property name="text">
+              <string>Подбор кривой усилия ШВП</string>
+             </property>
+             <property name="margin">
+              <number>5</number>
+             </property>
+            </widget>
+           </item>
+           <item row="0" column="3">
+            <widget class="ActionButton" name="actionbutton_4">
+             <property name="text">
+              <string>АВ ОСТ</string>
+             </property>
+             <property name="indicator_option" stdset="0">
+              <bool>true</bool>
+             </property>
+             <property name="indicator_status_option" stdset="0">
+              <bool>true</bool>
+             </property>
+             <property name="is_estopped_status" stdset="0">
+              <bool>true</bool>
+             </property>
+             <property name="estop_action" stdset="0">
+              <bool>true</bool>
+             </property>
+            </widget>
+           </item>
+           <item row="0" column="2">
+            <widget class="ActionButton" name="actionbutton_5">
+             <property name="text">
+              <string>Вкл/выкл</string>
+             </property>
+             <property name="indicator_option" stdset="0">
+              <bool>true</bool>
+             </property>
+             <property name="indicator_status_option" stdset="0">
+              <bool>true</bool>
+             </property>
+             <property name="is_estopped_status" stdset="0">
+              <bool>true</bool>
+             </property>
+             <property name="estop_action" stdset="0">
+              <bool>false</bool>
+             </property>
+             <property name="machine_on_action" stdset="0">
+              <bool>true</bool>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </widget>
+        </item>
+        <item row="2" column="1">
+         <widget class="QPlainTextEdit" name="plainTextEdit"/>
+        </item>
+        <item row="0" column="0" rowspan="3">
+         <widget class="QWidget" name="wgtTestPanel_3" native="true">
+          <property name="styleSheet">
+           <string notr="true">#widget {
+background-image: url(./resources/stripes.png);
+}</string>
+          </property>
+          <layout class="QGridLayout" name="gridLayout_18">
+           <item row="5" column="0">
+            <widget class="QLabel" name="label_11">
+             <property name="text">
+              <string>Граница краевых
+эффектов</string>
+             </property>
+            </widget>
+           </item>
+           <item row="3" column="0">
+            <widget class="QLabel" name="label_10">
+             <property name="text">
+              <string>Количество точек на ход</string>
+             </property>
+            </widget>
+           </item>
+           <item row="7" column="0">
+            <widget class="PushButton" name="btnCalibration">
+             <property name="styleSheet">
+              <string notr="true">background-color: rgb(138, 226, 52);</string>
+             </property>
+             <property name="text">
+              <string>Старт
+(калибровочный)</string>
+             </property>
+             <property name="checkable">
+              <bool>true</bool>
+             </property>
+            </widget>
+           </item>
+           <item row="4" column="0">
+            <widget class="QSpinBox" name="spnNofPoints">
+             <property name="minimum">
+              <number>1</number>
+             </property>
+             <property name="value">
+              <number>10</number>
+             </property>
+            </widget>
+           </item>
+           <item row="0" column="0">
+            <widget class="QLabel" name="label_8">
+             <property name="styleSheet">
+              <string notr="true">color: rgb(255, 255, 255);
+background-color: rgb(239, 41, 41);
+font: bold</string>
+             </property>
+             <property name="text">
+              <string>Настройки</string>
+             </property>
+             <property name="margin">
+              <number>5</number>
+             </property>
+            </widget>
+           </item>
+           <item row="2" column="0">
+            <widget class="PushButton" name="btnWriteFile_2">
+             <property name="styleSheet">
+              <string notr="true">background-color: rgb(252, 233, 79);</string>
+             </property>
+             <property name="text">
+              <string> Записать
+в файл</string>
+             </property>
+            </widget>
+           </item>
+           <item row="6" column="0">
+            <widget class="QDoubleSpinBox" name="spnNofPoints_2">
+             <property name="decimals">
+              <number>3</number>
+             </property>
+             <property name="maximum">
+              <double>0.500000000000000</double>
+             </property>
+             <property name="value">
+              <double>0.150000000000000</double>
+             </property>
+            </widget>
+           </item>
+           <item row="8" column="0">
+            <spacer name="verticalSpacer_5">
+             <property name="orientation">
+              <enum>Qt::Vertical</enum>
+             </property>
+             <property name="sizeHint" stdset="0">
+              <size>
+               <width>20</width>
+               <height>40</height>
+              </size>
+             </property>
+            </spacer>
+           </item>
+           <item row="1" column="0">
+            <widget class="QPushButton" name="btnBack_2">
+             <property name="text">
+              <string>&lt; Назад</string>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </widget>
+        </item>
+       </layout>
+      </widget>
      </widget>
     </item>
    </layout>
@@ -1886,8 +2110,8 @@ font: bold</string>
    <slot>onBtnClearPlot33()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>922</x>
-     <y>830</y>
+     <x>923</x>
+     <y>764</y>
     </hint>
     <hint type="destinationlabel">
      <x>784</x>
@@ -2135,6 +2359,38 @@ font: bold</string>
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>btnToCalibration</sender>
+   <signal>clicked()</signal>
+   <receiver>BallScrewControlMainWindow</receiver>
+   <slot>onBtnToCalib()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>73</x>
+     <y>696</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>4</x>
+     <y>707</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>btnBack_2</sender>
+   <signal>clicked()</signal>
+   <receiver>BallScrewControlMainWindow</receiver>
+   <slot>onBtnBack()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>91</x>
+     <y>87</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>5</x>
+     <y>80</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <slot>onBtnTempShow34()</slot>
@@ -2157,5 +2413,6 @@ font: bold</string>
   <slot>onPidCoefChanged()</slot>
   <slot>onBtnResetPressed()</slot>
   <slot>onBtnResetReleased()</slot>
+  <slot>onBtnToCalib()</slot>
  </slots>
 </ui>
