--- a/BallScrewVCP4.ui
+++ b/BallScrewVCP4.ui
@@ -392,8 +392,8 @@ approximate</string>
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>241</width>
-             <height>254</height>
+             <width>604</width>
+             <height>625</height>
             </rect>
            </property>
            <attribute name="label">
@@ -570,8 +570,8 @@ approximate</string>
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>108</width>
-             <height>124</height>
+             <width>604</width>
+             <height>625</height>
             </rect>
            </property>
            <attribute name="label">
@@ -637,8 +637,8 @@ approximate</string>
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>318</width>
-             <height>266</height>
+             <width>604</width>
+             <height>625</height>
             </rect>
            </property>
            <attribute name="label">
@@ -1221,17 +1221,7 @@ qproperty-diameter: 40;</string>
        </layout>
       </widget>
       <widget class="QWidget" name="page_5">
-       <layout class="QGridLayout" name="gridLayout_26" rowstretch="0,2,1" columnstretch="1,10" rowminimumheight="0,0,0">
-        <item row="1" column="1">
-         <widget class="PlotWidget" name="pltPID_2" native="true">
-          <property name="sizePolicy">
-           <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
-            <horstretch>0</horstretch>
-            <verstretch>0</verstretch>
-           </sizepolicy>
-          </property>
-         </widget>
-        </item>
+       <layout class="QGridLayout" name="gridLayout_26" rowstretch="0,0" columnstretch="1,5">
         <item row="0" column="1">
          <widget class="QWidget" name="wgtHeader_3" native="true">
           <property name="styleSheet">
@@ -1323,10 +1313,10 @@ qproperty-diameter: 40;</string>
           </layout>
          </widget>
         </item>
-        <item row="2" column="1">
+        <item row="1" column="1">
          <widget class="QPlainTextEdit" name="plainTextEdit"/>
         </item>
-        <item row="0" column="0" rowspan="3">
+        <item row="0" column="0" rowspan="2">
          <widget class="QWidget" name="wgtTestPanel_3" native="true">
           <property name="styleSheet">
            <string notr="true">#widget {
@@ -1338,14 +1328,7 @@ background-image: url(./resources/stripes.png);
             <widget class="QLabel" name="label_11">
              <property name="text">
               <string>Граница краевых
-эффектов</string>
-             </property>
-            </widget>
-           </item>
-           <item row="3" column="0">
-            <widget class="QLabel" name="label_10">
-             <property name="text">
-              <string>Количество точек на ход</string>
+эффектов, мм</string>
              </property>
             </widget>
            </item>
@@ -1369,9 +1352,48 @@ background-image: url(./resources/stripes.png);
               <number>1</number>
              </property>
              <property name="value">
-              <number>10</number>
+              <number>15</number>
              </property>
             </widget>
+           </item>
+           <item row="3" column="0">
+            <widget class="QLabel" name="label_10">
+             <property name="text">
+              <string>Количество точек
+на ход (1...99) </string>
+             </property>
+            </widget>
+           </item>
+           <item row="2" column="0">
+            <widget class="PushButton" name="btnWriteFile_2">
+             <property name="styleSheet">
+              <string notr="true">background-color: rgb(252, 233, 79);</string>
+             </property>
+             <property name="text">
+              <string> Записать
+в файл</string>
+             </property>
+            </widget>
+           </item>
+           <item row="1" column="0">
+            <widget class="QPushButton" name="btnBack">
+             <property name="text">
+              <string>&lt; Назад</string>
+             </property>
+            </widget>
+           </item>
+           <item row="9" column="0">
+            <spacer name="verticalSpacer_5">
+             <property name="orientation">
+              <enum>Qt::Vertical</enum>
+             </property>
+             <property name="sizeHint" stdset="0">
+              <size>
+               <width>20</width>
+               <height>40</height>
+              </size>
+             </property>
+            </spacer>
            </item>
            <item row="0" column="0">
             <widget class="QLabel" name="label_8">
@@ -1388,47 +1410,31 @@ font: bold</string>
              </property>
             </widget>
            </item>
-           <item row="2" column="0">
-            <widget class="PushButton" name="btnWriteFile_2">
-             <property name="styleSheet">
-              <string notr="true">background-color: rgb(252, 233, 79);</string>
-             </property>
-             <property name="text">
-              <string> Записать
-в файл</string>
-             </property>
-            </widget>
-           </item>
            <item row="6" column="0">
-            <widget class="QDoubleSpinBox" name="spnNofPoints_2">
+            <widget class="QDoubleSpinBox" name="spnTerminalEffects">
              <property name="decimals">
-              <number>3</number>
+              <number>1</number>
              </property>
              <property name="maximum">
-              <double>0.500000000000000</double>
+              <double>1000.000000000000000</double>
              </property>
              <property name="value">
-              <double>0.150000000000000</double>
+              <double>50.000000000000000</double>
              </property>
             </widget>
            </item>
            <item row="8" column="0">
-            <spacer name="verticalSpacer_5">
-             <property name="orientation">
-              <enum>Qt::Vertical</enum>
+            <widget class="PushButton" name="btnGetApprox">
+             <property name="styleSheet">
+              <string notr="true">background-color: rgb(138, 226, 52);</string>
              </property>
-             <property name="sizeHint" stdset="0">
-              <size>
-               <width>20</width>
-               <height>40</height>
-              </size>
-             </property>
-            </spacer>
-           </item>
-           <item row="1" column="0">
-            <widget class="QPushButton" name="btnBack">
              <property name="text">
-              <string>&lt; Назад</string>
+              <string>Подбор
+аппроксимации
+(в покое)</string>
+             </property>
+             <property name="checkable">
+              <bool>false</bool>
              </property>
             </widget>
            </item>
@@ -1490,8 +1496,8 @@ font: bold</string>
    <slot>onBtnLoadGCode34()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>288</x>
-     <y>80</y>
+     <x>695</x>
+     <y>205</y>
     </hint>
     <hint type="destinationlabel">
      <x>13</x>
@@ -1506,8 +1512,8 @@ font: bold</string>
    <slot>onBtnSaveGCode34()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>196</x>
-     <y>76</y>
+     <x>414</x>
+     <y>626</y>
     </hint>
     <hint type="destinationlabel">
      <x>5</x>
@@ -1538,8 +1544,8 @@ font: bold</string>
    <slot>onBtnShowResult34()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>217</x>
-     <y>73</y>
+     <x>562</x>
+     <y>382</y>
     </hint>
     <hint type="destinationlabel">
      <x>-2</x>
@@ -1579,6 +1585,54 @@ font: bold</string>
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>btnGetApprox</sender>
+   <signal>clicked()</signal>
+   <receiver>BallScrewControlMainWindow</receiver>
+   <slot>onBtnGetApprox()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>196</x>
+     <y>416</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>4</x>
+     <y>404</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>spnTerminalEffects</sender>
+   <signal>valueChanged(double)</signal>
+   <receiver>BallScrewControlMainWindow</receiver>
+   <slot>onSpnTerminalEffects()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>221</x>
+     <y>303</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>1</x>
+     <y>306</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>spnNofPoints</sender>
+   <signal>valueChanged(int)</signal>
+   <receiver>BallScrewControlMainWindow</receiver>
+   <slot>onSpnNofPoints()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>230</x>
+     <y>227</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>3</x>
+     <y>215</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <slot>onBtnTempShow34()</slot>
@@ -1593,5 +1647,8 @@ font: bold</string>
   <slot>update_ini()</slot>
   <slot>onBtnBack()</slot>
   <slot>onBtnLoadApprox()</slot>
+  <slot>onBtnGetApprox()</slot>
+  <slot>onSpnTerminalEffects()</slot>
+  <slot>onSpnNofPoints()</slot>
  </slots>
 </ui>
